0.9.0/_sources/generated/statsmodels.tsa.statespace.kalman_smoother.KalmanSmoother.rst.txt
statsmodels.tsa.statespace.kalman_smoother.KalmanSmoother
=========================================================

.. currentmodule:: statsmodels.tsa.statespace.kalman_smoother

.. autoclass:: KalmanSmoother

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~KalmanSmoother.bind
    
    
      ~KalmanSmoother.filter
    
    
      ~KalmanSmoother.impulse_responses
    
    
      ~KalmanSmoother.initialize_approximate_diffuse
    
    
      ~KalmanSmoother.initialize_known
    
    
      ~KalmanSmoother.initialize_stationary
    
    
      ~KalmanSmoother.loglike
    
    
      ~KalmanSmoother.loglikeobs
    
    
      ~KalmanSmoother.set_conserve_memory
    
    
      ~KalmanSmoother.set_filter_method
    
    
      ~KalmanSmoother.set_filter_timing
    
    
      ~KalmanSmoother.set_inversion_method
    
    
      ~KalmanSmoother.set_smooth_method
    
    
      ~KalmanSmoother.set_smoother_output
    
    
      ~KalmanSmoother.set_stability_method
    
    
      ~KalmanSmoother.simulate
    
    
      ~KalmanSmoother.smooth
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~KalmanSmoother.conserve_memory
      ~KalmanSmoother.design
      ~KalmanSmoother.dtype
      ~KalmanSmoother.endog
      ~KalmanSmoother.filter_augmented
      ~KalmanSmoother.filter_collapsed
      ~KalmanSmoother.filter_conventional
      ~KalmanSmoother.filter_exact_initial
      ~KalmanSmoother.filter_extended
      ~KalmanSmoother.filter_method
      ~KalmanSmoother.filter_methods
      ~KalmanSmoother.filter_square_root
      ~KalmanSmoother.filter_timing
      ~KalmanSmoother.filter_univariate
      ~KalmanSmoother.filter_unscented
      ~KalmanSmoother.inversion_method
      ~KalmanSmoother.inversion_methods
      ~KalmanSmoother.invert_cholesky
      ~KalmanSmoother.invert_lu
      ~KalmanSmoother.invert_univariate
      ~KalmanSmoother.memory_conserve
      ~KalmanSmoother.memory_no_filtered
      ~KalmanSmoother.memory_no_forecast
      ~KalmanSmoother.memory_no_gain
      ~KalmanSmoother.memory_no_likelihood
      ~KalmanSmoother.memory_no_predicted
      ~KalmanSmoother.memory_no_smoothing
      ~KalmanSmoother.memory_no_std_forecast
      ~KalmanSmoother.memory_options
      ~KalmanSmoother.memory_store_all
      ~KalmanSmoother.obs
      ~KalmanSmoother.obs_cov
      ~KalmanSmoother.obs_intercept
      ~KalmanSmoother.prefix
      ~KalmanSmoother.selection
      ~KalmanSmoother.smooth_alternative
      ~KalmanSmoother.smooth_classical
      ~KalmanSmoother.smooth_conventional
      ~KalmanSmoother.smooth_method
      ~KalmanSmoother.smooth_methods
      ~KalmanSmoother.smooth_univariate
      ~KalmanSmoother.smoother_all
      ~KalmanSmoother.smoother_disturbance
      ~KalmanSmoother.smoother_disturbance_cov
      ~KalmanSmoother.smoother_output
      ~KalmanSmoother.smoother_outputs
      ~KalmanSmoother.smoother_state
      ~KalmanSmoother.smoother_state_autocov
      ~KalmanSmoother.smoother_state_cov
      ~KalmanSmoother.solve_cholesky
      ~KalmanSmoother.solve_lu
      ~KalmanSmoother.stability_force_symmetry
      ~KalmanSmoother.stability_method
      ~KalmanSmoother.stability_methods
      ~KalmanSmoother.state_cov
      ~KalmanSmoother.state_intercept
      ~KalmanSmoother.time_invariant
      ~KalmanSmoother.timing_init_filtered
      ~KalmanSmoother.timing_init_predicted
      ~KalmanSmoother.timing_options
      ~KalmanSmoother.transition
   
   